--- a/ejercicio3.ipynb
+++ b/ejercicio3.ipynb
@@ -15,7 +15,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fila 21: One Year - Online Security : Yes - Online Backup 21: Yes - 82.45\n",
+      "Fila 37: One Year - Online Security : Yes - Online Backup 37: No - 104.55\n",
+      "Fila 137: Two Year - Online Security : No - Online Backup 137: Yes - 108.4\n",
+      "Fila 208: One Year - Online Security : No - Online Backup 208: Yes - 70.15\n",
+      "Fila 247: One Year - Online Security : Yes - Online Backup 247: No - 89.05\n",
+      "Fila 250: One Year - Online Security : No - Online Backup 250: Yes - 111.95\n",
+      "Fila 257: One Year - Online Security : No - Online Backup 257: Yes - 101.5\n",
+      "Fila 268: One Year - Online Security : Yes - Online Backup 268: No - 109.55\n",
+      "Fila 441: Two Year - Online Security : Yes - Online Backup 441: Yes - 70.2\n",
+      "Fila 461: One Year - Online Security : No - Online Backup 461: Yes - 111.95\n"
+     ]
+    }
+   ],
    "source": [
     "#carga el csv\n",
     "data = pd.read_csv(\"archivos/Telco_customer_churn_services.csv\")\n",
@@ -40,7 +57,13 @@
     "\n",
     "#guardar en postgres\n",
     "\n",
+    "1# conexion a la bd\n",
+    "2# creacion de tabla\n",
     "\n",
+    "for index, row in data.head(10).iterrows():\n",
+    "    print(f\"Fila {index}: {row['Contract']} - Online Security : {row['Online Security']} - Online Backup {index}: {row['Online Backup']} - {row['Monthly Charge']}\")\n",
+    "    #Online Security,Online Backup\n",
+    "    3# insert para la BD\n",
     "\n",
     "\n",
     "\n"
