--- a/ejercicio3.ipynb
+++ b/ejercicio3.ipynb
@@ -6,9 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import psycopg2"
    ]
   },
   {
@@ -17,19 +19,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fila 21: One Year - Online Security : Yes - Online Backup 21: Yes - 82.45\n",
-      "Fila 37: One Year - Online Security : Yes - Online Backup 37: No - 104.55\n",
-      "Fila 137: Two Year - Online Security : No - Online Backup 137: Yes - 108.4\n",
-      "Fila 208: One Year - Online Security : No - Online Backup 208: Yes - 70.15\n",
-      "Fila 247: One Year - Online Security : Yes - Online Backup 247: No - 89.05\n",
-      "Fila 250: One Year - Online Security : No - Online Backup 250: Yes - 111.95\n",
-      "Fila 257: One Year - Online Security : No - Online Backup 257: Yes - 101.5\n",
-      "Fila 268: One Year - Online Security : Yes - Online Backup 268: No - 109.55\n",
-      "Fila 441: Two Year - Online Security : Yes - Online Backup 441: Yes - 70.2\n",
-      "Fila 461: One Year - Online Security : No - Online Backup 461: Yes - 111.95\n"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#carga el csv\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marchivos/Telco_customer_churn_services.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#eliminar datos vacios\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# 1️⃣ Eliminar valores nulos\u001b[39;00m\n\u001b[1;32m      7\u001b[0m data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mdropna()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
    ],
@@ -58,20 +55,100 @@
     "#guardar en postgres\n",
     "\n",
     "1# conexion a la bd\n",
+    "conn = psycopg2.connect(\n",
+    "    port=\"5432\",\n",
+    "    host=\"localhost\",  # Dirección del servidor\n",
+    "    database=\"tarea_tres\",  # Nombre de la base de datos\n",
+    "    user=\"postgres\",  # Tu usuario de PostgreSQL\n",
+    "    password=\"postgres\"  # Tu contraseña de PostgreSQL\n",
+    ")\n",
     "2# creacion de tabla\n",
+    "# Crear un cursor para ejecutar comandos SQL\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Crear la tabla si no existe\n",
+    "create_table_query = \"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS customers (\n",
+    "    \"Customer ID\" SERIAL PRIMARY KEY,\n",
+    "    \"Count\" INT,\n",
+    "    \"Quarter\" VARCHAR(50),\n",
+    "    \"Referred a Friend\" VARCHAR(50),\n",
+    "    \"Number of Referrals\" INT,\n",
+    "    \"Tenure in Months\" INT,\n",
+    "    \"Offer\" VARCHAR(50),\n",
+    "    \"Phone Service\" VARCHAR(50),\n",
+    "    \"Avg Monthly Long Distance Charges\" FLOAT,\n",
+    "    \"Multiple Lines\" VARCHAR(50),\n",
+    "    \"Internet Service\" VARCHAR(50),\n",
+    "    \"Internet Type\" VARCHAR(50),\n",
+    "    \"Avg Monthly GB Download\" FLOAT,\n",
+    "    \"Online Security\" VARCHAR(50),\n",
+    "    \"Online Backup\" VARCHAR(50),\n",
+    "    \"Device Protection Plan\" VARCHAR(50),\n",
+    "    \"Premium Tech Support\" VARCHAR(50),\n",
+    "    \"Streaming TV\" VARCHAR(50),\n",
+    "    \"Streaming Movies\" VARCHAR(50),\n",
+    "    \"Streaming Music\" VARCHAR(50),\n",
+    "    \"Unlimited Data\" VARCHAR(50),\n",
+    "    \"Contract\" VARCHAR(50),\n",
+    "    \"Paperless Billing\" VARCHAR(50),\n",
+    "    \"Payment Method\" VARCHAR(50),\n",
+    "    \"Monthly Charge\" FLOAT,\n",
+    "    \"Total Charges\" FLOAT,\n",
+    "    \"Total Refunds\" FLOAT,\n",
+    "    \"Total Extra Data Charges\" FLOAT,\n",
+    "    \"Total Long Distance Charges\" FLOAT,\n",
+    "    \"Total Revenue\" FLOAT\n",
+    ");\n",
+    "\"\"\"\n",
+    "# Ejecutar la creación de la tabla\n",
+    "cursor.execute(create_table_query)\n",
+    "conn.commit()\n",
+    "\n",
+    "# Preparar el comando SQL para insertar los datos\n",
+    "insert_query = \"\"\"\n",
+    "INSERT INTO customers (\n",
+    "    \"Count\", \"Quarter\", \"Referred a Friend\", \"Number of Referrals\", \"Tenure in Months\", \n",
+    "    \"Offer\", \"Phone Service\", \"Avg Monthly Long Distance Charges\", \"Multiple Lines\", \n",
+    "    \"Internet Service\", \"Internet Type\", \"Avg Monthly GB Download\", \"Online Security\", \n",
+    "    \"Online Backup\", \"Device Protection Plan\", \"Premium Tech Support\", \"Streaming TV\", \n",
+    "    \"Streaming Movies\", \"Streaming Music\", \"Unlimited Data\", \"Contract\", \"Paperless Billing\", \n",
+    "    \"Payment Method\", \"Monthly Charge\", \"Total Charges\", \"Total Refunds\", \n",
+    "    \"Total Extra Data Charges\", \"Total Long Distance Charges\", \"Total Revenue\"\n",
+    ") VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s);\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "#for index, row in data.head(10).iterrows():\n",
+    "#    print(f\"Fila {index}: {row['Contract']} - Online Security : {row['Online Security']} - Online Backup {index}: {row['Online Backup']} - {row['Monthly Charge']}\")\n",
+    "    #Online Security,Online Backup\n",
+    "# insert para la BD\n",
     "\n",
     "for index, row in data.head(10).iterrows():\n",
-    "    print(f\"Fila {index}: {row['Contract']} - Online Security : {row['Online Security']} - Online Backup {index}: {row['Online Backup']} - {row['Monthly Charge']}\")\n",
-    "    #Online Security,Online Backup\n",
-    "    3# insert para la BD\n",
+    "    values = (\n",
+    "        row['Count'], row['Quarter'], row['Referred a Friend'], row['Number of Referrals'], row['Tenure in Months'],\n",
+    "        row['Offer'], row['Phone Service'], row['Avg Monthly Long Distance Charges'], row['Multiple Lines'],\n",
+    "        row['Internet Service'], row['Internet Type'], row['Avg Monthly GB Download'], row['Online Security'],\n",
+    "        row['Online Backup'], row['Device Protection Plan'], row['Premium Tech Support'], row['Streaming TV'],\n",
+    "        row['Streaming Movies'], row['Streaming Music'], row['Unlimited Data'], row['Contract'], row['Paperless Billing'],\n",
+    "        row['Payment Method'], row['Monthly Charge'], row['Total Charges'], row['Total Refunds'],\n",
+    "        row['Total Extra Data Charges'], row['Total Long Distance Charges'], row['Total Revenue']\n",
+    "    )\n",
+    "    \n",
+    "    # Ejecutar el insert\n",
+    "    cursor.execute(insert_query, values)\n",
+    "    conn.commit()\n",
     "\n",
+    "# Cerrar la conexión\n",
+    "cursor.close()\n",
+    "conn.close()\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
