--- a/ejercicio3.ipynb
+++ b/ejercicio3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,21 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#carga el csv\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marchivos/Telco_customer_churn_services.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m#eliminar datos vacios\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# 1️⃣ Eliminar valores nulos\u001b[39;00m\n\u001b[1;32m      7\u001b[0m data \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mdropna()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#carga el csv\n",
     "data = pd.read_csv(\"archivos/Telco_customer_churn_services.csv\")\n",
@@ -56,8 +44,7 @@
     "\n",
     "1# conexion a la bd\n",
     "conn = psycopg2.connect(\n",
-    "    port=\"5432\",\n",
-    "    host=\"localhost\",  # Dirección del servidor\n",
+    "    host=\"127.0.0.1\",  # Dirección del servidor\n",
     "    database=\"tarea_tres\",  # Nombre de la base de datos\n",
     "    user=\"postgres\",  # Tu usuario de PostgreSQL\n",
     "    password=\"postgres\"  # Tu contraseña de PostgreSQL\n",
