--- a/ejercicio3.ipynb
+++ b/ejercicio3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,19 +24,19 @@
     "\n",
     "#eliminar datos vacios\n",
     "\n",
-    "# 1️⃣ Eliminar valores nulos\n",
+    "# Eliminar valores nulos\n",
     "data = data.dropna()\n",
     "\n",
-    "# 2️⃣ Eliminar valores duplicados\n",
+    "# Eliminar valores duplicados\n",
     "data = data.drop_duplicates()\n",
     "\n",
-    "# 3️⃣ Eliminar valores atípicos en \"Monthly Charge\" usando rango intercuartil (IQR)\n",
+    "# Eliminar valores atípicos en \"Monthly Charge\" usando rango intercuartil (IQR)\n",
     "Q1 = data['Monthly Charge'].quantile(0.25)\n",
     "Q3 = data['Monthly Charge'].quantile(0.75)\n",
     "IQR = Q3 - Q1\n",
     "data = data[(data['Monthly Charge'] >= Q1 - 1.5 * IQR) & (data['Monthly Charge'] <= Q3 + 1.5 * IQR)]\n",
     "\n",
-    "# 4️⃣ Eliminar filas con valores no deseados en \"Contract\" (ejemplo: eliminar Month-to-Month)\n",
+    "# Eliminar filas con valores no deseados en \"Contract\" (ejemplo: eliminar Month-to-Month)\n",
     "data = data[data['Contract'] != 'Month-to-Month']\n",
     "\n",
     "\n",
@@ -55,7 +55,7 @@
     "\n",
     "# Crear la tabla si no existe\n",
     "create_table_query = \"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS customers (\n",
+    "CREATE TABLE IF NOT EXISTS clientes (\n",
     "    \"Customer ID\" SERIAL PRIMARY KEY,\n",
     "    \"Count\" INT,\n",
     "    \"Quarter\" VARCHAR(50),\n",
@@ -94,7 +94,7 @@
     "\n",
     "# Preparar el comando SQL para insertar los datos\n",
     "insert_query = \"\"\"\n",
-    "INSERT INTO customers (\n",
+    "INSERT INTO clientes (\n",
     "    \"Count\", \"Quarter\", \"Referred a Friend\", \"Number of Referrals\", \"Tenure in Months\", \n",
     "    \"Offer\", \"Phone Service\", \"Avg Monthly Long Distance Charges\", \"Multiple Lines\", \n",
     "    \"Internet Service\", \"Internet Type\", \"Avg Monthly GB Download\", \"Online Security\", \n",
@@ -135,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_23279/3075474822.py:14: FutureWarning: \n",
+      "/tmp/ipykernel_29695/3075474822.py:14: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -195,6 +195,77 @@
     "\n",
     "# Mostrar los gráficos\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_29695/344172371.py:22: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  data = pd.read_sql(query, conn)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#esta sintaxis es opcional, puesto que la tarea pide ingresar 10 registros y cada vez que se ejecuta el codigo\n",
+    "#se hace el insert de 10 regitros, se van a ir aumentando. por eso, usaremos el siguiente codigo para limpiar la tabla\n",
+    "\n",
+    "# Importar librerías necesarias\n",
+    "import psycopg2\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Conectarse a la base de datos PostgreSQL\n",
+    "conn = psycopg2.connect(\n",
+    "    dbname=\"tarea_tres\",\n",
+    "    user=\"postgres\",\n",
+    "    password=\"postgres\",\n",
+    "    host=\"localhost\",\n",
+    "    port=\"5432\"\n",
+    ")\n",
+    "\n",
+    "# Crear un cursor\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "# Cargar los datos de la tabla \"clientes\" en un DataFrame\n",
+    "query = \"SELECT * FROM clientes;\"\n",
+    "data = pd.read_sql(query, conn)\n",
+    "\n",
+    "# LIMPIEZA DE DATOS\n",
+    "\n",
+    "# Eliminar valores nulos\n",
+    "data_clean = data.dropna()\n",
+    "\n",
+    "# Eliminar duplicados\n",
+    "data_clean = data_clean.drop_duplicates()\n",
+    "\n",
+    "# como tercer paso se procede a eliminar valores atípicos en \"Monthly Charge\" usando rango intercuartil (IQR)\n",
+    "Q1 = data['Monthly Charge'].quantile(0.25)\n",
+    "Q3 = data['Monthly Charge'].quantile(0.75)\n",
+    "IQR = Q3 - Q1\n",
+    "data = data[(data['Monthly Charge'] >= Q1 - 1.5 * IQR) & (data['Monthly Charge'] <= Q3 + 1.5 * IQR)]\n",
+    "\n",
+    "# Finalmente se elimina filas con valores no deseados en \"Contract\" (ejemplo: eliminar Month-to-Month)\n",
+    "data = data[data['Contract'] != 'Month-to-Month']\n",
+    "\n",
+    "\n",
+    "# ACTUALIZAR LOS DATOS LIMPIOS EN LA BASE DE DATOS\n",
+    "\n",
+    "# Borrar los datos antiguos de la tabla\n",
+    "cur.execute(\"DELETE FROM clientes;\")\n",
+    "conn.commit()\n",
+    "\n",
+    "\n",
+    "# Confirmar cambios\n",
+    "conn.commit()\n",
+    "\n",
+    "# Cerrar la conexión\n",
+    "cur.close()\n",
+    "conn.close()\n"
    ]
   }
  ],
